<resources>
    <string name="app_name">tva-projekt</string>
    <string name="login"><u>Login</u></string>
    <string name="register"><u>Sign In</u></string>
    <string name="start_activity">Start activity</string>
    <string name="enter_activity">Enter Activity</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="history_activity">Activity History</string>
    <string name="visual_representation">Visual Representation</string>
    <string name="activity_name">Activity name</string>
    <string name="activity_type">Type of activity</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="date_enter_history">Date: </string>
    <string name="duration_enter_history">Duration: </string>
    <string name="activity_name_enter_history">Activity name: </string>
    <string name="description_enter_history">Description: </string>
    <string name="activity_details">Activity details</string>
    <string name="save">Save</string>
    <string name="getPredefindActivity">Get a Activity for This Type</string>
    <string name="enteredActivities">Entered History</string>
    <string name="go_back">Go Back</string>
    <string name="btn_weekly">Weekly</string>
    <string name="btn_monthly">Monthly</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="cycling">Cycling</string>

    <string-array name="activities_array">
        <item>Run</item>
        <item>Walk</item>
        <item>Bike</item>
        <item>Fitness</item>
        <item>Body Workout</item>
        <item>Swimming</item>
        <item>Other</item>
    </string-array>
    <string name="allRoomActivities">All Activities</string>
    <string name="title_activity_choose_second">ChooseActivitySecond</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps activityRoomObjects quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the activityRealmObject in the experience.\n"
        "An emphasis on activityRealmObject actions makes core functionality immediately apparent and provides "
        "waypoints for the activityRealmObject.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the activityRealmObject as the prime mover. Primary activityRealmObject actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the activityRealmObject without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to activityRealmObject input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "activityRealmObject picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a activityRealmObject tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="monthly_history">Monthly history</string>
    <string name="total_distance">Total_distance</string>
    <string name="days_active">Days_active</string>
    <string name="weekly_history">Weekly history</string>
    <string name="dob">Birth year</string>
    <string name="log_out">Log Out</string>

    <string name="steps">Steps</string>

    <string name="notLoggedIn">Login if you want to choose a activity</string>
    <string name="notRegistered">Can not login! Register Here</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose">choose_activity</string>
    -->
    <!-- Strings used for fragments for navigation -->
    <!--
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    -->

</resources>