<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <FrameLayout
        android:id="@+id/enter_activity_main"
        android:layout_width="320px"
        android:layout_height="110px"
        android:layout_marginStart="30px"
        android:layout_marginTop="30px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/go_back_button"
            android:layout_width="320px"
            android:layout_height="100px"
            android:layout_gravity="fill"
            android:background="#0000"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="45px"
            app:backgroundTint="@color/white"
            android:onClick="closeEnterActivity"/>

        <ImageButton
            android:id="@+id/go_back"
            android:layout_width="40px"
            android:layout_height="120px"
            android:background="#0000"
            android:contentDescription="@string/enter_activity"
            android:src="@drawable/go_back"
            android:onClick="closeEnterActivity"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/activity_name"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:textSize="80px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,3:2"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/date"
        android:textColor="@color/text_grey"
        android:textFontWeight="900"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="480dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/duration"
        android:textColor="@color/text_grey"
        android:textFontWeight="900"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="560dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/distance"
        android:textColor="@color/text_grey"
        android:textFontWeight="900"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>