<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <FrameLayout
        android:id="@+id/enter_activity_main"
        android:layout_width="320px"
        android:layout_height="110px"
        android:layout_marginStart="30px"
        android:layout_marginTop="30px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/go_back_button"
            android:layout_width="320px"
            android:layout_height="100px"
            android:layout_gravity="fill"
            android:background="#0000"
            android:onClick="closeEnterActivity"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="45px"
            app:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/go_back"
            android:layout_width="40px"
            android:layout_height="120px"
            android:background="#0000"
            android:contentDescription="@string/enter_activity"
            android:onClick="closeEnterActivity"
            android:src="@drawable/go_back" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/history_activity"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:textSize="80px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_weekly"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/save_button"
        android:text="@string/btn_weekly"
        android:textAllCaps="false"
        android:textSize="60px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="filter_week"/>

    <Button
        android:id="@+id/btn_monthly"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/save_button"
        android:text="@string/btn_monthly"
        android:textAllCaps="false"
        android:textSize="60px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="filter_month"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="529dp"
        android:paddingHorizontal="10dp"
        tools:listitem="@layout/recycler_view_row"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_weekly" />

</androidx.constraintlayout.widget.ConstraintLayout>