<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <FrameLayout
        android:id="@+id/enter_activity_main"
        android:layout_width="320px"
        android:layout_height="110px"
        android:layout_marginStart="30px"
        android:layout_marginTop="30px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/go_back_button"
            android:layout_width="320px"
            android:layout_height="100px"
            android:layout_gravity="fill"
            android:background="#0000"
            android:onClick="closeEnterActivity"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="45px"
            app:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/go_back"
            android:layout_width="40px"
            android:layout_height="120px"
            android:background="#0000"
            android:contentDescription="@string/enter_activity"
            android:onClick="closeEnterActivity"
            android:src="@drawable/go_back" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/weekly_monthly"
        android:textColor="@color/black"
        android:textFontWeight="900"
        android:textSize="80px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="320dp"
        android:paddingHorizontal="10dp"
        tools:listitem="@layout/recycler_view_row_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/duration"
        android:textColor="@color/text_grey"
        android:textFontWeight="900"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="460dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/total_distance"
        android:textColor="@color/text_grey"
        android:textFontWeight="900"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDaysActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="460dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/days_active"
        android:textColor="@color/text_grey"
        android:textFontWeight="900"
        android:textSize="40px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>