<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/enter_activity_main"
            android:layout_width="500px"
            android:layout_height="130px"
            android:layout_marginStart="30px"
            android:layout_marginTop="30px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/go_back_button"
                android:layout_width="500px"
                android:layout_marginStart="20dp"
                android:gravity="left"
                android:layout_height="130px"
                android:layout_gravity="fill"
                android:background="#0000"
                android:text="@string/go_back"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="45px"
                app:backgroundTint="@color/white"
                android:onClick="goToMainActivity"/>

            <ImageButton
                android:id="@+id/go_back"
                android:layout_width="40px"
                android:layout_height="120px"
                android:background="#0000"
                android:contentDescription="@string/enter_activity"
                android:src="@drawable/go_back"
                android:onClick="goToMainActivity"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="213dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textFontWeight="900"
            android:textSize="80px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="252dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/username"
            android:textColor="@color/text_grey"
            android:textFontWeight="900"
            android:textSize="40px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="365dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="336dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/email"
            android:textColor="@color/text_grey"
            android:textFontWeight="900"
            android:textSize="40px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="365dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="364dp"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="419dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/password"
            android:textColor="@color/text_grey"
            android:textFontWeight="900"
            android:textSize="40px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="365dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="449dp"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/female"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="504dp"
            android:background="@drawable/toggle_button_selector"
            android:textOff="@string/female"
            android:textOn="@string/female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ToggleButton
            android:id="@+id/male"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="198dp"
            android:layout_marginTop="504dp"
            android:background="@drawable/toggle_button_selector"
            android:textOff="@string/male"
            android:textOn="@string/male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="540dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/dob"
            android:textColor="@color/text_grey"
            android:textFontWeight="900"
            android:textSize="40px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editDob"
            android:layout_width="365dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="570dp"
            android:background="@drawable/layout_border"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="630dp"
            android:backgroundTint="@color/save_button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="60px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>